# powerline-rust

./: Cargo.toml  rustfmt.toml
examples/: minimalistic.rs
src/: lib.rs  modules.rs  powerline.rs  terminal.rs  theme.rs  themes.rs
src/modules/: cmd.rs  cwd.rs  exit_code.rs  git.rs  host.rs  padding.rs  readonly.rs  time.rs  user.rs  venv.rs
src/themes/: gruvbox_theme.rs  simple_theme.rs
