[package]
name = "powerline"
version = "0.3.0"
authors = ["cirho <me@cirho.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
hostname = "0.4"
git2 = { version = "0.20", optional = true, default-features = false }
chrono = { version = "0.4.41", optional = true }

[target.'cfg(unix)'.dependencies]
users = "0.11"

[features]
default = ["bash-shell", "libgit"]
bash-shell = []
bare-shell = []
zsh-shell = []
libgit = ["git2"]
time = ["chrono"]

[profile.release]
opt-level = 3
lto = true
debug = false
strip = true
